[package]
name = "syrup"
version = "0.2.0"
description = "Simple abstraction around pancurses for chat-like interfaces"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kpcyrd/syrup-rs"
keywords = ["pancurses", "curses", "ncurses", "pdcurses", "chat"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/syrup-rs" }

[dependencies]
pancurses = "0.16.0"
textwrap = { version="0.10", default-features=false }
